# linicon-theme

./: .build.yml  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
contrib/: _incr_version
examples/: get_theme.rs  only_gsettings.rs
src/: lib.rs
test_data/: gsettings  gtk2  gtk3  kdeglobals  theme.conf
