[package]
name = "linicon-theme"
authors = ["Ben Aaron Goldberg <ben@benaaron.dev>"]
version = "1.0.0"
description = "Get the user's current icon the on Linux"
categories = ["os", "os::unix-apis"]
keywords = ["linux", "icons", "freedesktop"]
repository = "https://git.sr.ht/~zethra/linicon-theme"
documentation = "https://docs.rs/linicon-theme"
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
include = ["src/lib.rs", "LICENSE", "README.md"]


[dependencies]
freedesktop_entry_parser = "1.1"
rust-ini = "0.15"
